# Peer-to-Peer-File-Sharing-with-BitTorrent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  demo.md  limitations.md  report.md  team_split.md
docs/architecture/: deployment-view.md  dynamic-view.md  overview.md  static-view.md
docs/assets/screenshots/user-flow/: README.md
docs/development/: demo.md  protocol.md  team-responsibilities.md
docs/reports/: final-report.md
src/p2p_share/: .gitignore  __init__.py  cli.py  config.py  downloader.py  logging_utils.py  membership.py  metadata.py  network.py  peer.py  storage.py
src/p2p_share/application/: __init__.py  downloader.py  peer.py
src/p2p_share/domain/: __init__.py  dht.py  protocol.py
src/p2p_share/infrastructure/: __init__.py  network.py
src/p2p_share/interfaces/: cli.py
src/tests/: test_dht.py  test_ids.py  test_integration_e2e.py  test_metadata.py
tests/: test_integration_e2e.py  test_storage.py
tests/integration/: test_upload_download.py
tests/unit/: test_dht.py  test_ids.py  test_metadata.py  test_storage.py
